minio-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: api
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: console
    port: 9001
    targetPort: 9001
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-external
  namespace: default
subsets:
  - addresses:
    - ip: 172.16.0.231
    ports:
    - name: api
      port: 9000
      protocol: TCP
    - name: console
      port: 9001
      protocol: TCP
